[gd_scene load_steps=10 format=3 uid="uid://cm4xk168u8rq5"]

[ext_resource type="Script" path="res://scripts/tree_chunk.gd" id="1_s5p0d"]
[ext_resource type="Shader" path="res://shaders/chunk.gdshader" id="2_whork"]
[ext_resource type="Shader" path="res://shaders/meshterrain.gdshader" id="3_dtpd5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n0e7p"]
render_priority = 0
shader = ExtResource("2_whork")

[sub_resource type="ImageTexture" id="ImageTexture_woeo5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_plgfh"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_dtpd5")
shader_parameter/area_min = null
shader_parameter/area_size = null
shader_parameter/texture_size = null
shader_parameter/noise = SubResource("ImageTexture_woeo5")

[sub_resource type="PlaneMesh" id="PlaneMesh_r5w0t"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_plgfh")
size = Vector2(1, 1)
subdivide_width = 63
subdivide_depth = 63

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oecmr"]
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0, 0, 1, 1)
roughness = 0.5

[sub_resource type="QuadMesh" id="QuadMesh_yhtmk"]
material = SubResource("StandardMaterial3D_oecmr")
subdivide_width = 7
subdivide_depth = 7
orientation = 1

[node name="TreeChunk" type="Node3D"]
script = ExtResource("1_s5p0d")
shader = ExtResource("3_dtpd5")

[node name="GroundMesh" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_n0e7p")

[node name="TerrainMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_r5w0t")

[node name="WaterMesh" type="MeshInstance3D" parent="."]
cast_shadow = 0
mesh = SubResource("QuadMesh_yhtmk")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
